Plane/helm/admin-svc.yml
- apiVersion: v1
  kind: Service
  metadata:
    name: admin
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: admin-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      io.kompose.service: admin
    sessionAffinity: None
    type: ClusterIP
