Plane/helm/api-svc.yml
- apiVersion: v1
  kind: Service
  metadata:
    name: api
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: api-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      io.kompose.service: plane-db
    sessionAffinity: None
    type: ClusterIP
