Plane/helm/live-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: plane-app-live
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: live-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    io.kompose.service: live
  sessionAffinity: None
  type: ClusterIP
