Plane/helm/minio-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: plane-minio
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: minio-api-9000
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: minio-console-9090
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    io.kompose.service: plane-minio
  sessionAffinity: None
  type: ClusterIP
