Plane/helm/rabbitmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: plane-mq
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: rabbitmq-5672
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: rabbitmq-mgmt-15672
    port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    io.kompose.service: plane-mq
  sessionAffinity: None
  type: ClusterIP
