Plane/helm/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: plane-redis
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: redis-6379
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    io.kompose.service: plane-redis
  sessionAffinity: None
  type: ClusterIP
