Plane/helm/space-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: space
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: space-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    io.kompose.service: space
  sessionAffinity: None
  type: ClusterIP
