Plane/helm/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    io.kompose.service: plane-redis
  sessionAffinity: None
  type: ClusterIP
